src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>of_Paid_RE_Subscription_Services_Used__c</fullName>
        <inlineHelpText>How many paid real estate research/data subscription services do you currently use?</inlineHelpText>
        <label># of Paid RE Subscription Services Used.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2-3</fullName>
                </value>
                <value>
                    <fullName>4-5</fullName>
                </value>
                <value>
                    <fullName>6+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__Person_Has_Moved__c</fullName>
        <description>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</description>
        <inlineHelpText>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</inlineHelpText>
        <label>Person Has Moved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Complete_Status__c</fullName>
        <defaultValue>&quot;Not Compared&quot;</defaultValue>
        <label>ZoomInfo Complete Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email Address for the Lead record.</description>
        <inlineHelpText>ZoomInfo Email Address for the Lead record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Industry__c</fullName>
        <description>The Salesforce standard Industry field is only 40 characters in length. As ZoomInfo industries are sometimes longer than this, the ZoomInfo Industry field can hold up to 255 characters.</description>
        <label>ZoomInfo Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Last_Clean_Run__c</fullName>
        <description>Date/time refers to last time ZoomInfo Clean ran for record.</description>
        <inlineHelpText>Date/time refers to last time ZoomInfo Clean ran for record.</inlineHelpText>
        <label>ZoomInfo Last Clean Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Lead record.</description>
        <inlineHelpText>ZoomInfo Phone for the Lead record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</description>
        <inlineHelpText>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</inlineHelpText>
        <label>ZoomInfo Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__Zoom_Clean_Status__c</fullName>
        <label>ZoomInfo Clean Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                    <color>#009900</color>
                    <label>Clean</label>
                </value>
                <value>
                    <fullName>In Sync</fullName>
                    <color>#78C953</color>
                    <label>In Sync</label>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                    <color>#EFAE73</color>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Not Compared</fullName>
                    <color>#AFCADF</color>
                    <default>true</default>
                    <label>Not Compared</label>
                </value>
                <value>
                    <fullName>Different</fullName>
                    <color>#F3D904</color>
                    <label>Different</label>
                </value>
                <value>
                    <fullName>Company Clean Only</fullName>
                    <color>#33CC00</color>
                    <label>Company Clean Only</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <color>#CC0000</color>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Advisory_Lead</fullName>
        <columns>Account__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Minimum_Advisory_Fee_50k__c</columns>
        <columns>Referred_By_Lead__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Advisory</value>
        </filters>
        <label>Referrals to Advisory</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Most_Recent_Marketing_Activity__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Marketing_Identified_State_lead__c</columns>
        <columns>Marketing_Identified_Country_lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Commercial_Advisory_ARR_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Commercial + Advisory ARR</label>
        <queue>Commercial_Advisory_ARR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Disqualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Disqualified</value>
        </filters>
        <label>Disqualified Leads</label>
    </listViews>
    <listViews>
        <fullName>EU_SDR_Inbound_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>EU SDR Inbound</label>
        <queue>EU_SDR_Inbound</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_SDR_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Classification__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Marketing_Identified_Country_lead__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Inbound</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Inbound SDR Open Leads</label>
        <sharedTo>
            <role>BDR</role>
            <role>BDR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lead_Type__c</columns>
        <columns>Part_of_Renewal__c</columns>
        <columns>Product_Interest_1__c</columns>
        <columns>Product_Interest_2__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Referrals</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Disqualified</value>
        </filters>
        <label>Referrals</label>
        <sharedTo>
            <role>GSA_Executive</role>
            <role>Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>My Open Leads</label>
    </listViews>
    <listViews>
        <fullName>New_Leads1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Most_Recent_Marketing_Activity__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Marketing_Identified_State_lead__c</columns>
        <columns>Marketing_Identified_Country_lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New Leads</label>
    </listViews>
    <listViews>
        <fullName>Sales_Queue</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATE_CODE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Marketing</value>
        </filters>
        <label>Sales Queue</label>
        <queue>Sales</queue>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>US_SDR_Inbound_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>US SDR Inbound</label>
        <queue>US_SDR_Inbound</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <businessProcess>Marketing</businessProcess>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referrals</fullName>
        <active>true</active>
        <businessProcess>Referrals</businessProcess>
        <label>Referral</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Assign_Lead_Owner_To_User</fullName>
        <active>true</active>
        <description>Prevents users to move the status when lead is owned by a queue.</description>
        <errorConditionFormula>AND(
$RecordType.Name = &quot;Marketing&quot;,
ISCHANGED(Status),
BEGINS (OwnerId, &quot;00G&quot;)
)</errorConditionFormula>
        <errorMessage>Please assign this lead to a user before moving the status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Required_to_Close_Referral</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
AND(
 $RecordType.Name = &quot;Referral&quot;,
 ISBLANK( Questions_Comments__c ),
OR(
ISPICKVAL( Status , &quot;Disqualified&quot;),
ISPICKVAL( Status , &quot;Sales Qualified&quot;))
))</errorConditionFormula>
        <errorDisplayField>Questions_Comments__c</errorDisplayField>
        <errorMessage>Please Provide Feedback in the Questions &amp; Comments Section before disqualifying this referral</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Opportunity_Creation</fullName>
        <active>true</active>
        <description>Blocks leads from being converted without creating or associating to an opportunity</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
AND (
IsConverted=true, 
Isblank(ConvertedOpportunityId),
OR(
CONTAINS($UserRole.Name,&quot;sales&quot;),
CONTAINS($UserRole.Name,&quot;BDR&quot;)
)
))</errorConditionFormula>
        <errorMessage>You Must Associate this lead with an Opportunity or Create a new one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Advisory_Minimum</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISBLANK(TEXT(Minimum_Advisory_Fee_50k__c)),
ISPICKVAL(Lead_Type__c,&quot;Advisory&quot;))</errorConditionFormula>
        <errorMessage>Please ensure Typical Advisory Minimum (6-figures) is populated before saving this Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Disqualified_Context</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name = &quot;Marketing&quot;,
ISBLANK(Disqualified_Context__c),
OR(
ISPICKVAL( Reason_Disqualified__c , &quot;Other&quot;),
ISPICKVAL( Reason_Disqualified__c , &quot;Product Fit&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Disqualified_Context__c</errorDisplayField>
        <errorMessage>Please provide Disqualified Context.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Email_OR_Phone_to_Sales_Qualify</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
AND(
(ISPICKVAL( Status , &quot;Sales_Qualified&quot; )),
(ISBLANK( Email )), 
(ISBLANK( MobilePhone )), 
(ISBLANK( Phone )) 
))</errorConditionFormula>
        <errorMessage>You must enter an Email or Phone number to qualify a lead or convert it (stage 2).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_GS_Relationship</fullName>
        <active>true</active>
        <description>Input GS Relationship when lead is marked as Disqualified</description>
        <errorConditionFormula>AND(
$RecordType.Name = &quot;Marketing&quot;,
ISPICKVAL( GS_Relationship__c, &quot;&quot;),
ISPICKVAL( Status , &quot;Disqualified&quot;)
)</errorConditionFormula>
        <errorDisplayField>GS_Relationship__c</errorDisplayField>
        <errorMessage>Please provide GS Relationship before disqualifying this lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reason_Disqualified</fullName>
        <active>true</active>
        <description>Provide Lead Source and a Reason for Disqualification.</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
AND( 

ISPICKVAL( Status , &quot;Disqualified&quot; ), 

OR ( 
ISBLANK (TEXT(Reason_Disqualified__c )), 
ISBLANK (TEXT( LeadSource ))) 

))</errorConditionFormula>
        <errorMessage>Provide Lead Source and a Reason for Disqualification.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Revisit_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name = &quot;Marketing&quot;,
ISPICKVAL( Reason_Disqualified__c , &quot;Timing&quot;),
ISBLANK(Revisit_Date__c) 
)</errorConditionFormula>
        <errorDisplayField>Revisit_Date__c</errorDisplayField>
        <errorMessage>Please provide Revisit Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Sales_Qualify</fullName>
        <active>true</active>
        <description>Marketing Leads - Require Lead Source and Company type to convert to sales qualified</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
AND( 
RecordType.DeveloperName = &quot;Marketing&quot;,
ISPICKVAL( Status , &quot;Sales_Qualified&quot; ),
OR(
ISBLANK (TEXT(  Company_Type_new__c  )),
ISBLANK (TEXT( LeadSource )))
))</errorConditionFormula>
        <errorMessage>Provide Lead Source and Company type for conversion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Designation_for_Advisory_Referrals</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
AND(
ISPICKVAL(Lead_Type__c, &quot;Advisory&quot;),
ISBLANK(Text(Team__c))
))</errorConditionFormula>
        <errorMessage>You must designate a Team in order to send a referral to Advisory.</errorMessage>
    </validationRules>
</CustomObject>